# Tcc-Agentes-De-IA

./: .gitignore  2_Codigo_Groq_TavilyTools.py  5_Codigo_GPT_TCC.py  ADD_Codigo_base.py  README.md  chatgptagentedeia.py  exemplo.db  hello.py  pyproject.toml  temperature.py
