[project]
name = "ex-agentes"
version = "0.1.0"
description = "Tcc Sistemas de Informação - Agentes de IA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.12",
    "fastapi>=0.116.1",
    "groq>=0.31.0",
    "mysql-connector-python",
    "openai>=1.101.0",
    "tavily-python>=0.7.11",
    "uvicorn>=0.35.0",
]
